# nuislang

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
crates/nuis-artifact/: Cargo.toml
crates/nuis-artifact/src/: artifact.rs  bridge_registry.rs  build_manifest.rs  clock_protocol.rs  domain_unit.rs  envelope.rs  error.rs  host_bridge_plan.rs  lib.rs  payload_blob.rs  protocol.rs  toml.rs
crates/nuis-runtime/: Cargo.toml
crates/nuis-runtime/src/: bridge.rs  error.rs  executor.rs  host_yir.rs  lib.rs  loader.rs  registry.rs  session.rs
crates/yir-domain-cpu/: Cargo.toml
crates/yir-domain-cpu/src/: branch_effect.rs  carry_payload.rs  describe.rs  describe_async.rs  describe_basic.rs  describe_host.rs  describe_loops_control.rs  describe_post_control.rs  describe_scalar_memory.rs  execute_host.rs  execute_memory.rs  execute_scalar.rs  execute_tasks.rs  execute_values.rs  lib.rs  loop_metadata.rs  runtime_helpers.rs  tests.rs  tests_branch_effect.rs  tests_owned_select_non_null.rs
crates/yir-domain-kernel/: Cargo.toml
crates/yir-domain-kernel/src/: arithmetic.rs  describe.rs  lib.rs  tensor_ops.rs
crates/yir-domain-npu/: Cargo.toml
crates/yir-domain-npu/src/: lib.rs
crates/yir-domain-shader/: Cargo.toml
crates/yir-domain-shader/src/: ball_packet.rs  ball_packet_from_parts.rs  control_panel_extended_summary.rs  control_panel_layout.rs  control_panel_summary.rs  control_panel_surface.rs  control_panel_widgets.rs  describe.rs  execute_core.rs  execute_effects.rs  flow_state.rs  frame_surface.rs  geometry_overlay.rs  lib.rs  packet_helpers.rs  parse_ball_packet.rs  parse_ball_packet_controls.rs  parse_ball_packet_frame_sync.rs  parse_ball_packet_response.rs  parse_ball_packet_scene_core.rs  parse_ball_packet_scene_core_fields.rs  parse_ball_packet_scene_core_helpers.rs  parse_ball_packet_scene_runtime.rs  parse_ball_packet_tuple.rs  render_pass.rs  scene_preview.rs  scene_runtime_overlay.rs  sphere_render.rs  surface_primitives.rs  texture_sampling.rs
crates/yir-exec/: Cargo.toml
crates/yir-exec/src/: lib.rs
crates/yir-host-render/: Cargo.toml
crates/yir-host-render/src/: lib.rs
crates/yir-lower-contract/: Cargo.toml
crates/yir-lower-contract/src/: backend_variants.rs  contract_render.rs  contract_render_shader.rs  kernel_analysis.rs  lib.rs  shader_analysis.rs  shader_ir.rs
crates/yir-lower-llvm/: Cargo.toml
crates/yir-lower-llvm/src/: async_resource_lowering.rs  bitwise_lowering.rs  branch_effect_lowering.rs  call_lowering.rs  call_return.rs  cast_lowering.rs  data_ingress_lowering.rs  effect_flow_loop_lowering.rs  emit_utils.rs  extern_abi.rs  extern_call_lowering.rs  facts.rs  function_lowering.rs  guard_host_call.rs  guard_return_lowering.rs  lib.rs  loop_async_post_flow_payload.rs  loop_async_post_flow_source.rs  loop_carry_payload.rs  loop_carry_read_source.rs  loop_carry_scaled_source.rs  loop_carry_source.rs  loop_chain_result.rs  loop_effect_action.rs  loop_expr.rs  loop_flow_control_lowering.rs  loop_scalar.rs  memory_lowering.rs  nustar_provider.rs  owned_tree_call_args.rs  param_lowering.rs  preclassified_lowering.rs  print_lowering.rs  return_lowering.rs  scalar_equality_lowering.rs  scalar_lowering.rs  scalar_order_lowering.rs  select_lowering.rs  simple_loop_lowering.rs  static_lowering.rs  (+6 more)
crates/yir-lower-llvm/tests/: host_abi.rs
crates/yir-runtime-host/: Cargo.toml
crates/yir-runtime-host/src/: lib.rs
crates/yir-verify/: Cargo.toml
crates/yir-verify/src/: cpu_heap.rs  cpu_heap_checks.rs  cpu_heap_state.rs  graph.rs  lib.rs  nustar_provider.rs  project_abi_contracts.rs  project_contracts.rs  project_target_contracts.rs  result_state.rs  scheduler_contracts.rs  scheduler_lane_contracts.rs  scheduler_observer_contracts.rs  tests.rs
tools/nsdb/: Cargo.toml  README.md
tools/nsdb/provider-runners/: coreml_vector_affine.m  data_fan_out.c  metal_f32_bias.m  metal_gray8_invert.m  metal_u32_add.m  unix_worker_probe.c
tools/nsdb/src/: cli.rs  cursor.rs  cursor_lineage.rs  cursor_lineage_repair_journal.rs  digest_sha256.rs  display.rs  handoff.rs  hetero_trace.rs  json.rs  json_replay.rs  json_transcript.rs  lib.rs  main.rs  model.rs  payload_decoder.rs  provider_adapter_binding.rs  provider_bundle_registry.rs  provider_carrier_channel.rs  provider_carrier_channel_registry.rs  provider_carrier_channel_unix.rs  provider_carrier_input.rs  provider_completion_integrity.rs  provider_completion_signature.rs  provider_completion_trust_anchor.rs  provider_completion_trust_registry.rs  provider_edge_staging_registry.rs  provider_edge_transport.rs  provider_execution_adapter.rs  provider_execution_capsule.rs  provider_execution_coreml.rs  provider_execution_metal.rs  provider_execution_native.rs  provider_graph_output.rs  provider_graph_output_tests.rs  provider_input_binding.rs  provider_native_output_payload.rs  provider_output_carrier_registry.rs  provider_output_carrier_unix.rs  provider_output_comparison.rs  provider_output_comparison_descriptor.rs  (+41 more)
tools/nuisc/: Cargo.toml
tools/nuisc/src/: aot.rs  aot_artifact.rs  aot_artifact_hash.rs  aot_c_shim_buffer_runtime.rs  aot_c_shim_env_io_runtime.rs  aot_c_shim_file_runtime.rs  aot_c_shim_fs_runtime.rs  aot_c_shim_header_runtime.rs  aot_c_shim_helpers.rs  aot_c_shim_http_runtime.rs  aot_c_shim_network_owned_runtime.rs  aot_c_shim_network_probe_runtime.rs  aot_c_shim_network_runtime.rs  aot_c_shim_owned_blob_runtime.rs  aot_c_shim_path_runtime.rs  aot_c_shim_process_runtime.rs  aot_c_shim_provider_worker_control.rs  aot_c_shim_provider_worker_launch.rs  aot_c_shim_provider_worker_output.rs  aot_c_shim_provider_worker_process_adapter.rs  aot_c_shim_provider_worker_result.rs  aot_c_shim_provider_worker_runtime.rs  aot_c_shim_runtime.rs  aot_c_shim_serialization_runtime.rs  aot_c_shim_source.rs  aot_c_shim_text_runtime.rs  aot_c_shim_time_debug_runtime.rs  aot_compile_driver.rs  (+152 more)
tools/yir-emit-llvm/: Cargo.toml
tools/yir-export-frame/: Cargo.toml
tools/yir-export-ui-plan/: Cargo.toml
tools/yir-pack-aot/: Cargo.toml
tools/yir-run/: Cargo.toml
(+3049 files in other folders)
