[workspace]
members = [
    "crates/nuis-runtime",
    "crates/nuis-semantics",
    "crates/strategy-ai",
    "crates/yir-core",
    "crates/yir-domain-cpu",
    "crates/yir-domain-shader",
    "crates/yir-syntax",
    "crates/yir-verify",
    "crates/yir-exec",
    "tools/nuisc",
    "tools/yir-run"
]
resolver = "2"

# 可选，方便 workspace 一键构建文档/测试
[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Team Silvortex <team@silvortex.dev>"]
repository = "https://github.com/Team-silvortex/nuislang"
readme = "README.md"
description = "NuisLang — A semantics-centric language designed to outlive hardware."

# 可选全局依赖版本锁，防止 crate 不同版本冲突
[workspace.dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
