[workspace]
members = [
    "crates/nuis-runtime",
    "crates/nuis-semantics",
    "crates/strategy-ai",
    "crates/yir-core",
    "crates/yir-domain-cpu",
    "crates/yir-domain-kernel",
    "crates/yir-domain-npu",
    "crates/yir-domain-shader",
    "crates/yir-host-render",
    "crates/yir-runtime-host",
    "crates/yir-lower-contract",
    "crates/yir-lower-llvm",
    "crates/yir-syntax",
    "crates/yir-verify",
    "crates/yir-exec",
    "tools/nuis",
    "tools/nuis-rc",
    "tools/nuisc",
    "tools/yir-export-ui-plan",
    "tools/yir-export-frame",
    "tools/yir-pack-aot",
    "tools/yir-run",
    "tools/yir-emit-llvm"
]
resolver = "2"

# 可选，方便 workspace 一键构建文档/测试
[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Team Silvortex <team@silvortex.dev>"]
repository = "https://github.com/Team-silvortex/nuislang"
readme = "README.md"
description = "NuisLang — A semantics-centric language designed to outlive hardware."

# 可选全局依赖版本锁，防止 crate 不同版本冲突
[workspace.dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
