[package]
name = "nuis-artifact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shared compiled-artifact, envelope, and build-manifest decoding models for Nuis."

[lib]
path = "src/lib.rs"
