[package]
name = "yir-domain-npu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Reference NPU/tensor domain mod for handwritten YIR graphs."

[dependencies]
yir-core = { path = "../yir-core" }
