[package]
name = "yir-domain-shader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shader domain mod for handwritten YIR, with Metal-oriented resource matching."

[lib]
path = "src/lib.rs"

[dependencies]
yir-core = { path = "../yir-core" }
