[package]
name = "yir-host-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Host-side helpers for turning YIR frame surfaces into concrete image buffers."

[lib]
path = "src/lib.rs"

[dependencies]
yir-core = { path = "../yir-core" }
