[package]
name = "yir-lower-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Analyze YIR shader lowering eligibility and fallback requirements."

[dependencies]
yir-core = { path = "../yir-core" }
