[package]
name = "yir-lower-llvm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "A small LLVM IR text emitter for the CPU slice of YIR graphs."

[dependencies]
yir-core = { path = "../yir-core" }
yir-verify = { path = "../yir-verify" }
