[package]
name = "yir-verify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Static verifier for handwritten YIR modules."

[dependencies]
yir-core = { path = "../yir-core" }
yir-domain-cpu = { path = "../yir-domain-cpu" }
yir-domain-kernel = { path = "../yir-domain-kernel" }
yir-domain-npu = { path = "../yir-domain-npu" }
yir-domain-shader = { path = "../yir-domain-shader" }
