[package]
name = "nsdb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Nsdb YIR-layer debugger front-door prototype for the Nuis toolchain."

[dependencies]
nuisc = { path = "../nuisc" }
ed25519-dalek.workspace = true
libc.workspace = true
