[package]
name = "nuisc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Execution scheduler compiler prototype for Nuis."

[dependencies]
nuis-artifact = { path = "../../crates/nuis-artifact" }
nuis-runtime = { path = "../../crates/nuis-runtime" }
nuis-semantics = { path = "../../crates/nuis-semantics" }
yir-core = { path = "../../crates/yir-core" }
yir-lower-llvm = { path = "../../crates/yir-lower-llvm" }
