[package]
name = "yir-export-frame"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Execute a YIR graph and export its frame output as a PPM image."

[dependencies]
yir-runtime-host = { path = "../../crates/yir-runtime-host" }
