[package]
name = "yir-export-ui-plan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Extract a minimal host UI plan from handwritten YIR."

[dependencies]
yir-syntax = { path = "../../crates/yir-syntax" }
